--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "homepage": "https://github.com/guipimenta/FutureBet",
   "devDependencies": {
     "bootstrap": "^3.3.7",
-    "angular": "^1.6.4"
+    "angular": "^1.6.4",
+    "angular-route": "^1.6.4"
   }
 }
