--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "bootstrap": "^3.3.7",
     "angular": "^1.6.4",
-    "angular-route": "^1.6.4"
+    "angular-route": "^1.6.4",
+    "angular-resource": "^1.6.4"
   }
 }
