--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "bootstrap": "^3.3.7",
     "angular": "^1.6.4",
     "angular-route": "^1.6.4",
-    "angular-resource": "^1.6.4"
+    "angular-resource": "^1.6.4",
+    "bootstrap-slider": "*"
   }
 }
