--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
     "express": "^4.15.2"
   },
   "devDependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "express-logging": "^1.1.1",
+    "express-session": "^1.15.5",
     "logops": "^2.1.0",
     "mongoose": "^4.9.6",
     "orm": "^3.2.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "sqlite3": "^3.1.8"
   }
 }
