--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "angular": "^1.6.4",
     "angular-route": "^1.6.4",
     "angular-resource": "^1.6.4",
-    "bootstrap-slider": "*"
+    "bootstrap-slider": "*",
+    "angular-cookies": "^1.6.6",
+    "angular-http-auth": "^1.5.0"
   }
 }
